# chill_engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main.cpp  scene.cpp  scene.hpp
_chill_renderer/: CMakeLists.txt
_chill_renderer/include/chill_renderer/: application.hpp  assert.hpp  buffers.hpp  buffers_templates.cpp  file_manager.hpp  meshes.hpp  resource_manager.hpp  shaders.hpp  shaders_templates.cpp
_chill_renderer/src/: application.cpp  assert.cpp  buffers.cpp  file_manager_linux.cpp  file_manager_win32.cpp  light.cpp  resource_manager.cpp  shaders.cpp  window.cpp
chill_renderer/: CMakeLists.txt
chill_renderer/include/chill_renderer/: assert.hpp  buffers.hpp  buffers_templates.cpp  camera.hpp  file_manager.hpp  light.hpp  meshes.hpp  model.hpp  presets.hpp  resource_manager.hpp  shaders.hpp  shaders_templates.cpp  shadows.hpp  window.hpp
chill_renderer/include/glad/: glad.h
chill_renderer/src/: assert.cpp  buffers.cpp  camera.cpp  file_manager_linux.cpp  glad.c  meshes.cpp  model.cpp  presets.cpp  resource_manager.cpp  shaders.cpp  shadows.cpp  window.cpp
example/: CMakeLists.txt  README.md  fragment_shader_object.glsl  lightbulb.fsh  main.cpp  main.vsh  multi_light.fsh  object.fsh  readme.txt
examples/lighting/: CMakeLists.txt  README.md  main.cpp  main.vsh  multi_light.fsh
examples/lighting/assets/container/: container.mtl
include/: app.hpp  application.hpp  assert.hpp  buffer_obj.hpp  buffers.hpp  camera.hpp  figures.hpp  figures_constants.hpp  file_manager.hpp  game.hpp  light.hpp  meshes.hpp  model.hpp  resource_manager.hpp  shaders.hpp  window.hpp
include/chill_engine/: application.hpp  assert.hpp  buffers.hpp  buffers_templates.cpp  camera.hpp  file_manager.hpp  light.hpp  meshes.hpp  model.hpp  presets.hpp  resource_manager.hpp  shaders.hpp  shaders_templates.cpp  window.hpp
shaders/: dynamic_env.frag  dynamic_env.vert  explosion.geom  fog.frag  instanced.frag  main.vert  multi_instanced.vert  multi_light.frag  pass_through.geom  reflection.frag  refraction.frag  skybox.frag  skybox.vert
shaders/NormalVisualizer/: normal_vis.frag  normal_vis.geom  normal_vis.vert
shaders/PostProcess/: post.vert  post_gamma.frag  post_grayscale_average.frag  post_grayscale_weighted.frag  post_inverse.frag  post_kernel.frag  post_none.frag  post_none_MSAA.frag
shaders/ShadowMap/: depth.frag  depth.vert  depth_instanced.vert
shaders/SingleColor/: single_color.frag  single_color.vert
src/: app.cpp  application.cpp  assert.cpp  buffer_obj.cpp  buffers.cpp  camera.cpp  figures.cpp  file_manager_linux.cpp  file_manager_win32.cpp  game.cpp  glad.c  light.cpp  meshes.cpp  model.cpp  presets.cpp  resource_manager.cpp  shaders.cpp  window.cpp
